<resources>
    <string name="app_name">Hula Park</string>

    <string name="navstr_parking">Στάθμευση</string>
    <string name="navstr_map">Χάρτης</string>
    <string name="navstr_wallet">Πορτοφόλι</string>
    <string name="navstr_statistics">Στατιστικά</string>

    <string name="button_new_parking">ΝΕΑ ΣΤΑΘΜΕΥΣΗ</string>

    <string name="info_create_acc">Δημιουργώντας λογαριασμό</string>

    <string name="singIn">Σύνδεση</string>
    <string name="singUp">Εγγραφή</string>

    <string name="info_praking_txt1">Πιο εύκολη &amp; γρήγορη πληρωμή στάθμευσης</string>
    <string name="info_praking_txt2">Παρακολούθηση τρεχόντων σταθμεύσεων</string>

    <string name="info_wallet_txt1">Έλεγχος υπολοίπου προτοφολιού</string>
    <string name="info_wallet_txt2">Εύκολη και γρήγορη αύξηση υπολοίπου</string>

    <string name="info_statistics_txt1">Προβολή πλήρους ιστορικού συναλλαγών</string>
    <string name="info_statistics_txt2">Προβολή στατιστικών χρήσης</string>

    <string name="admin_activity_title">Admin Page</string>
    <string name="auth_activity_title">Authentication</string>
    <string name="initparking_activity_title">Έναρξη Στάθμευσης</string>
    <string name="finishparking_activity_title">Ολοκλήρωση Στάθμευσης</string>

    <string name="admin_landing">Welcome to <b>Admin Page</b></string>
    <string name="auth_landing">Please, <b>authenticate</b> yourself!</string>
    <string name="locationFinderNotImplemented">Δυστυχώς, η υπηρεσία εύρεσης της τοποθεσίας σας δεν έχει υλοποιηθεί ακόμα.</string>

    <string name="init_pariking_plate">Πινακίδα <b><font color="#ff0000">*</font></b></string>
    <string name="init_pariking_plate_h">πχ. ΝΑΒ1234</string>
    <string name="init_pariking_spot">Τοποθεσία <b><font color="#ff0000">*</font></b></string>
    <string name="init_pariking_spot_h">Επιλέξτε την βολική προς εσάς τοποθεσία απο τη λίστα, ή χρησιμοποιόντας τον χάρτη</string>
    <string name="init_pariking_duration">Διάρκεια <b><font color="#ff0000">*</font></b></string>

    <string name="auth_email">Email <b><font color="#ff0000">*</font></b></string>
    <string name="auth_password">Password <b><font color="#ff0000">*</font></b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bullet"><font size="18"> \u2022 </font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>