<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_parking_car"
        android:enabled="true"
        android:icon="@drawable/ic_parking_car"
        android:title="@string/navstr_parking"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/navstr_map"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_wallet"
        android:enabled="true"
        android:icon="@drawable/ic_wallet"
        android:title="@string/navstr_wallet"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_statistics"
        android:title="@string/navstr_statistics"
        app:showAsAction="never"/>
</menu>