<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Activities.InitParkingScreen">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="32dp"
            android:hint="@string/init_pariking_plate"
            app:helperText="@string/init_pariking_plate_h"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:counterTextColor="@android:color/transparent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/init_plate_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="32dp"
            android:hint="@string/init_pariking_spot"
            app:helperText="@string/init_pariking_spot_h"
        >

            <AutoCompleteTextView
                android:id="@+id/init_pariking_spot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="32dp"
            android:hint="@string/init_pariking_duration"
            >
            <AutoCompleteTextView
                android:id="@+id/init_pariking_duration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/transitToPaymentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="15dp"
            android:text="Μετάβαση στη σελίδα πληρωμής"
            app:backgroundTint="@color/teal_700"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:paddingVertical="16sp"
            android:paddingHorizontal="24sp"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>