<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".UserFragments.Guest.GuestWalletFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoBoxWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/bg_info_panel"
        android:elevation="20dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/infoWalletScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoCreateAccTxt2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:drawableTop="@drawable/ic_about"
                    android:drawableTint="@color/gray_600"
                    android:gravity="bottom"
                    android:text="@string/info_create_acc"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/infoWalletArrow1"
                        android:layout_width="16dp"
                        android:layout_height="25dp"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/ic_rpointer" />

                    <TextView
                        android:id="@+id/infoWalletTxt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_wallet_txt1"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/infoWalletArrow2"
                        android:layout_width="16dp"
                        android:layout_height="25dp"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/ic_rpointer" />

                    <TextView
                        android:id="@+id/infoWalletTxt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_wallet_txt2"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/frag_guest_auth_btns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBoxWallet"
    />


</androidx.constraintlayout.widget.ConstraintLayout>